objects/KB_Article_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Feedback_Status__c</fullName>
        <description>Stores the status of the Feedback</description>
        <label>Feedback Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KB_Article_ID__c</fullName>
        <description>Stores the knowledge article ID</description>
        <label>KB Article ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KB_Article_Link__c</fullName>
        <description>Stores KB article Link</description>
        <label>KB Article Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>KB_Article_Number__c</fullName>
        <description>Stores the article number</description>
        <label>KB Article Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KB_Article_Title__c</fullName>
        <description>Stores the KB article title</description>
        <label>KB Article Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KB_Comments__c</fullName>
        <description>Stores the user comments</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KB_Edited_By__c</fullName>
        <description>Stores the KB article last edited by Information</description>
        <label>Edited By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KB_Language__c</fullName>
        <description>Stores KB Article Language</description>
        <label>Language</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>KB_Feedback_List</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>KB_Article_Number__c</columns>
        <columns>KB_Article_Title__c</columns>
        <columns>KB_Comments__c</columns>
        <columns>KB_Language__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>KB_Article_Link__c</columns>
        <columns>Feedback_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>KB Feedback List</label>
        <language>en_US</language>
    </listViews>
</CustomObject>